builder/tests/15-name-value-attribute.stderr
error: expected `builder(each = "...")`
 --> tests/15-name-value-attribute.rs:5:7
  |
5 |     #[builder = "whatever"]
  |       ^^^^^^^^^^^^^^^^^^^^
